--- a/WhiteBears/Style/UserSettings.css
+++ b/WhiteBears/Style/UserSettings.css
@@ -23,6 +23,10 @@
     max-width: 600px;
 }
 
-#EditButtonsContainer {
+#EditWidgetsContainer {
     text-align: center;
+}
+
+.noBorder {
+    border: 0;
 }
