--- a/WhiteBears/Views/AdminPage/UserTable.cshtml
+++ b/WhiteBears/Views/AdminPage/UserTable.cshtml
@@ -1,5 +1,7 @@
 ﻿@model WhiteBears.Models.User
 
+@Styles.Render("~/Style/UserSettings.css")
+
 <tr>
     <td>@Model.FirstName</td>
     <td>@Model.LastName</td>
