Add generic admin home page

--- a/WhiteBears/Views/AdminPage/Index.cshtml
+++ b/WhiteBears/Views/AdminPage/Index.cshtml
@@ -1,8 +1,26 @@
 ﻿
-@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+@Styles.Render("~/Style/UserSettings.css")
 
-<h2>Index</h2>
+<script src="~/Scripts/jquery-3.3.1.js"></script>
+<div id="AddHeaderContainer">
+    <h2 class="header">Admin Home Page</h2>
+</div>
+<h3 class="header">Settings</h3>
 
+<div id="SettingsButtonContainer" class="btn-group">
+    <button class="btn btn-lg btn-primary" value="users">Users (Add/Modify/Remove)</button>
+    <button class="btn btn-lg btn-danger" value="projects">Projects (Remove)</button>
+</div>
+
+<script>
+    $(document).ready(function () {
+
+        $('button[value=users]').on('click', function () {
+            window.location.href = '@Url.Action("UserSettings", "AdminPage")';
+        })
+
+        $('button[value=projects]').on('click', function () {
+            window.location.href = '@Url.Action("ProjectSettings", "AdminPage")';
+        })
+    });
+</script>
