Additional functionalities for AdminPage from Sprint 6

--- a/WhiteBears/Views/AdminPage/Index.cshtml
+++ b/WhiteBears/Views/AdminPage/Index.cshtml
@@ -7,9 +7,15 @@
 </div>
 <h3 class="header">Settings</h3>
 
-<div id="SettingsButtonContainer" class="btn-group">
-    <button class="btn btn-lg btn-primary" value="users">Users (Add/Modify/Remove)</button>
-    <button class="btn btn-lg btn-danger" value="projects">Projects (Remove)</button>
+<div id="SettingsButtonContainer">
+    <div class="container">
+        <label>If you want to add new users, modify user's information, or purge them from the system, use this.</label><br />
+        <button class="btn btn-lg btn-primary" value="users">Users (Add/Modify/Remove)</button>
+    </div><br />
+    <div class="container">
+        <label>If you want to purge projects from the system to save space, use this.</label><br />
+        <button class="btn btn-lg btn-danger" value="projects">Projects (Remove)</button>
+    </div>
 </div>
 
 <script>
