--- a/WhiteBears/Views/AdminPage/TaskTable.cshtml
+++ b/WhiteBears/Views/AdminPage/TaskTable.cshtml
@@ -1,9 +1,13 @@
 ﻿@model IEnumerable<WhiteBears.Models.Task>
 
-<table class="table tasktable">
+<script src="~/Scripts/jquery-3.3.1.js"></script>
+<script>
+</script>
+
+<table class="table tasktable" id="tasktable">
     <tbody>
         <tr>
-            <th>Task ID</th>
+            <th onclick="sortTable(0)">Task ID</th>
             <th>Title</th>
             <th>Description</th>
             <th>Start Date</th>
