--- a/WhiteBears/Views/Home/Index.cshtml
+++ b/WhiteBears/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿
 <html>
 <head>
-   
+   @{     Layout = "~/Views/Shared/_NotLoggedIn.cshtml";
+}
     <link href="~/Content/Styling.css" rel="stylesheet" />
 </head>
 
