--- a/WhiteBears/Style/SignUp.css
+++ b/WhiteBears/Style/SignUp.css
@@ -29,16 +29,19 @@
     margin-bottom: 20px;
 }
 
-.table{
-    
+.formContainer {
+    border: solid darkgray 2px;
+    border-radius: 20px 20px 20px 20px;
+    padding: 25px;
 }
+
 
 #CompanyInformationContainer{
     margin-left: 50px;
 }
 #PersonalInformationContainer, #CompanyInformationContainer {
     float: left;
-    width: 500px;
+    width: 400px;
 }
 
 #FirstProjectInformationContainer {
@@ -51,8 +54,8 @@
     overflow: auto;
 }
 
-input[text]{
-    width: auto;
+input{
+    width: inherit
 }
 
 .login-background {
