Changed the code to better meet MVC concept, removing view operations from the controller

--- a/WhiteBears/Views/DocumentReview/Index.cshtml
+++ b/WhiteBears/Views/DocumentReview/Index.cshtml
@@ -23,8 +23,8 @@
                     $("#oldTimeStamp").html(data.timeStamp1);
                     $("#newModifiedBy").html(data.modifiedBy2);
                     $("#newTimeStamp").html(data.timeStamp2);
-                    $("#oldDocument").html(data.Doc1);
-                    $("#newDocument").html(data.Doc2);
+                    displayDocument(data.Doc1, "oldDocument");
+                    displayDocument(data.Doc2, "newDocument");
                     if (data.fileSize1 > 1000) {
                         $("#oldFileSize").html((data.fileSize1/1000.00).tofixed(2) + " MB");
                     }
@@ -42,6 +42,111 @@
             });
         });
     });
+
+    var displayDocument = function (elements, target) {
+        var returnString = "";
+        $("#" + target).empty();
+        for (i = 0; i < elements.length; i++) {
+            
+            element = searchArray(elements, i);
+            if (element.type == "PARAGRAPH") {
+                var par = elements[i];
+                switch (par.status) {
+                    case "o": 
+                        returnString += "<p>ID:" + element.id + " " + element.content + "</p>";
+                        console.log(returnString);
+                        break;
+                    case "n":
+                        returnString += "<p style='background-color:rgba(100, 200, 100, 0.8);'>ID:" + element.id + " " + element.content + "</p>";
+                        break;
+                    case "d":
+                        returnString += "<p style='background-color:rgba(200, 100, 100, 0.8);'>ID:" + element.id + " " + element.content + "</p>";
+                        break;
+                    case "m":
+                        returnString += "<p>ID:" + element.id + " ";
+                        sentences = par.elements;
+                        for (j = 0; j < sentences.length; j++) {
+                            sentence = searchArray(sentences, j);
+                            switch (sentence.status) {
+                                case "m":
+                                    returnString += "<span style='background-color:rgba(200, 200, 80, 0.8);'>" + sentence.content + ".</span>";
+                                    break;
+                                case "o":
+                                    returnString += sentence.content + ".";
+                                    break;
+                            }
+                        }
+                        returnString += "</p>";
+                        break;
+                }
+                $("#" + target).append(returnString);
+                returnString = "";
+            }
+            else if (element.type == "PICTURE") {
+                var style = "height:300px;margin:1px;border:solid 3px;border-color:";
+                switch (element.status) {
+                    case "n":
+                        style += "rgba(100, 200, 100, 0.8);";
+                        break;
+                    case "m":
+                        style += "rgba(200, 200, 80, 0.8);";
+                        break;
+                    case "d":
+                        style += "rgba(200, 100, 100, 0.8);";
+                        break;
+                    default:
+                        style = "height:300px;margin:1px;";
+                        break;
+                }
+                returnString += "<img id='p" + element.order + "'/><br/>";
+                console.log(returnString);
+                $("#" + target).append(returnString);
+                $('#p' + element.order).attr("src", "data:image/" + element.format + ";base64, " + element.content);
+                $('#p' + element.order).attr("style", style);
+                returnString = "";
+            }
+            else if (element.type == "TABLE") {
+                var tableId = "t" + element.order + target;
+                $("#" + target).append("<table id='" + tableId + "' style='width:100%;margin:5px 0px 5px 0px;'><tbody>");
+                rows = element.elements;
+                for (j = 0; j < rows.length; j++) {
+                    row = searchArray(rows, j);
+                    var rowId = "r" + element.order + row.order + target;
+                    $("#" + tableId).append("<tr id='" + rowId + "' style='width:100%;'>");
+                    cells = row.elements;
+                    for (k = 0; k < cells.length; k++) {
+                        cell = searchArray(cells, k);
+                        console.log(cell);
+                        var cellId = "c" + element.order + row.order + cell.order + target;
+                        $("#" + rowId).append("<td id='" + cellId + "'>" + cell.content + "</td>");
+                        var style = "border:solid 1px;width:" + 100 / cells.length +"%;";
+                        switch (cell.status) {
+                            case "o":
+                                break;
+                            case "n":
+                                style += "background-color:rgba(100, 200, 100, 0.8);"
+                                break;
+                            case "d":
+                                style += "background-color:rgba(200, 100, 100, 0.8);"
+                                break;
+                        }
+                        $("#" + cellId).attr("style", style);
+                    }
+                }
+            }
+        }
+        
+    }
+
+    var searchArray = function (elements, order) {
+        var element;
+        $.each(elements, function (i, v) {
+            if (v.order == order) {
+                element = v;
+            }
+        })
+        return element;
+    }
 </script>
 
 
