Fix canvas size issue

--- a/WhiteBears/Style/dashboard.css
+++ b/WhiteBears/Style/dashboard.css
@@ -30,12 +30,8 @@ table {
     float: left;
     margin-left: 50px;
     margin-top: 20px;
-    min-height: 200px;
-}
-
-#TaskOverviewSection{
-    text-align: center;
-    float: right;
+    min-height: 300px;
+    min-width: 550px;
 }
 
 .TaskPercentage{
@@ -167,4 +163,19 @@ header {
     height: auto;
     max-height: 400px;
     overflow: scroll;
+}
+
+#TaskOverviewSection {
+    text-align: center;
+    float: right;
+    height: 300px;
+    width: 300px;
+    margin-top: 20px;
+    margin-right: 30px;
+}
+
+
+#pie-chartcanvas{
+    width: 500px;
+    height: 250px;
 }
