--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -471,7 +471,9 @@
                         var myDoughnutChart = new Chart(ctx, {
                             type: 'doughnut',
                             data: data1,
-                            options: {}
+                            options: {
+                                responsive: false
+                            }
                         });
                     },
 
