--- a/WhiteBears/Views/Dashboard/Index.cshtml
+++ b/WhiteBears/Views/Dashboard/Index.cshtml
@@ -312,6 +312,7 @@
                 addButton.text("Add");
                 changeButtonState(deleteButton, false);
                 changeButtonState(modifyButton, false);
+                changeButtonState(addButton, true);
             }
         })
 
